[tool.poetry]
name = "UncertaintyRegression"
version = "0.1.0"
description = "Simple and Effective Approaches for Uncertainty Prediction in Facial Action Unit Intensity Regression"
authors = ["Torsten Wörtwein <twoertwein@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
python-tools = {git = "https://bitbucket.org/twoertwein/python-tools.git"}

[tool.poetry.dev-dependencies]
pynvim = "^0.4.2"
ipdb = "^0.13.3"
ipython = "^7.18.1"
black = "^20.8b1"
isort = "^5.6.4"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py38"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

