[tool.poetry]
name = "UncertaintyRegression"
version = "0.1.0"
description = "Simple and Effective Approaches for Uncertainty Prediction in Facial Action Unit Intensity Regression"
authors = ["Torsten Wörtwein <twoertwein@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "3.11.*"
python-tools = {git = "https://bitbucket.org/twoertwein/python-tools.git"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

